--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -10,13 +10,13 @@
     "import pandas as pd\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('CleanedDataset.csv')\n",
+    "df = pd.read_csv('btp.csv')\n",
     "\n",
     "# Split the 'date' column into 'date' and 'time'\n",
     "df[['date', 'time']] = df['date'].str.split(' ', expand=True)\n",
     "\n",
     "# Save the changes back to the CSV file without including the index\n",
-    "df.to_csv('CleanedDataset.csv', index=False)\n"
+    "df.to_csv('btp.csv', index=False)\n"
    ]
   },
   {
