--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,27 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "2ea4e9e4-c5fa-4c37-824a-d2c241dd5264",
+   "cell_type": "markdown",
+   "id": "581313dc",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('btp.csv')\n",
-    "\n",
-    "# Split the 'date' column into 'date' and 'time'\n",
-    "df[['date', 'time']] = df['date'].str.split(' ', expand=True)\n",
-    "\n",
-    "# Save the changes back to the CSV file without including the index\n",
-    "df.to_csv('btp.csv', index=False)\n"
+    "Number of Reviews posted by each user on a particular date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "807a7ee5-5966-40d0-8f47-2bdeb0a78132",
    "metadata": {},
    "outputs": [
@@ -47,19 +36,17 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('btp.csv')\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
-    "\n",
-    "# Group by 'user_id' and 'date' and count the number of reviews for each user on each date\n",
     "user_date_review_counts = df.groupby(['user_id', 'date'])['review_id'].count().reset_index()\n",
     "user_date_review_counts.columns = ['user_id', 'date', 'num_reviews']\n",
-    "\n",
-    "# Display the result\n",
     "print(user_date_review_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "491fe2bb",
    "metadata": {},
    "outputs": [
@@ -93,21 +80,23 @@
    ],
    "source": [
     "df['date'] = pd.to_datetime(df['date'])\n",
-    "\n",
-    "# Group by 'user_id' and 'date' and count the number of reviews for each user on each date\n",
     "user_date_review_counts = df.groupby(['user_id', 'date'])['review_id'].count().reset_index()\n",
     "user_date_review_counts.columns = ['user_id', 'date', 'num_reviews']\n",
-    "\n",
-    "# Filter rows where num_reviews is greater than 5\n",
     "users_with_more_than_5_reviews = user_date_review_counts[user_date_review_counts['num_reviews'] > 5]\n",
-    "\n",
-    "# Display the result\n",
     "print(users_with_more_than_5_reviews)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5962c8a3",
+   "metadata": {},
+   "source": [
+    "Total Reviews on each date"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "29c6a512",
    "metadata": {},
    "outputs": [
@@ -115,29 +104,185 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           date  total_reviews\n",
-      "15   2005-07-10             13\n",
-      "249  2007-02-01             12\n",
-      "255  2007-02-09             12\n",
-      "272  2007-03-02             11\n",
-      "489  2007-10-29             12\n",
-      "...         ...            ...\n",
-      "4786 2019-08-08             12\n",
-      "4798 2019-08-20             11\n",
-      "4805 2019-08-27             11\n",
-      "4816 2019-09-07             13\n",
-      "4913 2019-12-13             11\n",
-      "\n",
-      "[3573 rows x 2 columns]\n"
+      "0       1\n",
+      "1       2\n",
+      "2       1\n",
+      "3       1\n",
+      "4       2\n",
+      "       ..\n",
+      "5430    1\n",
+      "5431    1\n",
+      "5432    1\n",
+      "5433    1\n",
+      "5434    1\n",
+      "Name: total_reviews, Length: 5435, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "filtered_reviews = total_reviews_by_date[total_reviews_by_date['total_reviews'] > 10]\n",
+    "filtered_reviews = total_reviews_by_date['total_reviews']\n",
     "\n",
     "# Display the result\n",
     "print(filtered_reviews)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18192ea8",
+   "metadata": {},
+   "source": [
+    "Less than 60 seconds time difference reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "fb7dd66c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pc\\AppData\\Local\\Temp\\ipykernel_8028\\2336372979.py:3: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['time'] = pd.to_datetime(df['time'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      user_id       date  num_reviews\n",
+      "36     -0vutwuE36iYMqM2wHaStQ 2009-03-12            2\n",
+      "41     -13RX4Gy_F-zoLIenWAo-w 2007-04-20            2\n",
+      "45     -2TJaAdxSGnTyy9qGr1z1Q 2011-04-08            2\n",
+      "49     -2Vg22LqKpg0zjf5A-SWLA 2015-01-23            2\n",
+      "62     -2nNiAnDaSbQayynsqgL6Q 2011-09-20            2\n",
+      "...                       ...        ...          ...\n",
+      "95614  zwPKdviIT_C4CD2ZL_nJyQ 2012-06-19            2\n",
+      "95621  zx4c7K-1eBSvEmUg7zqiZQ 2011-03-09            2\n",
+      "95631  zxeXnjqmlrAspfk17LSZCg 2011-03-20            3\n",
+      "95639  zxuxd6Hz2tKcpgZ71dYEcw 2014-04-03            2\n",
+      "95654  zyNrXvJyYdC34tS6BcCykA 2009-11-17            3\n",
+      "\n",
+      "[6503 rows x 3 columns]\n",
+      "                      user_id       date       time_diff\n",
+      "43095  -NMGRUbMdKZ7acHGWKvy8Q 2010-09-07 0 days 00:00:34\n",
+      "90140  -hq6dkvt907T0MPJK9Qaig 2013-04-16 0 days 00:00:29\n",
+      "96233  0Cl_C3VvG88g-Hussui3_Q 2014-06-28 0 days 00:00:32\n",
+      "28479  0EQlpgEQVTxCeKd7CbetdQ 2010-12-15 0 days 00:00:59\n",
+      "27996  0d1Qa6dckkZ9UTK_1_eNTw 2012-10-14 0 days 00:00:42\n",
+      "...                       ...        ...             ...\n",
+      "88667  xl2Lspp8Ltqy_qTVMNja_g 2011-01-06 0 days 00:00:45\n",
+      "14639  xyFtRXaTjhStZB3Zb9uFvA 2008-01-16 0 days 00:00:52\n",
+      "18950  yoa61s3IdHwi8q5_gLvzaw 2012-10-25 0 days 00:00:51\n",
+      "28270  yx8wkvWdCH-eN6PHWKT7Wg 2014-02-19 0 days 00:00:55\n",
+      "62539  zxeXnjqmlrAspfk17LSZCg 2011-03-20 0 days 00:00:54\n",
+      "\n",
+      "[148 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "df.sort_values(by=['user_id', 'date', 'time'], inplace=True)\n",
+    "df['time_diff'] = df.groupby(['user_id', 'date'])['time'].diff()\n",
+    "user_date_review_counts = df.groupby(['user_id', 'date'])['review_id'].count().reset_index()\n",
+    "user_date_review_counts.columns = ['user_id', 'date', 'num_reviews']\n",
+    "users_with_more_than_1_review = user_date_review_counts[user_date_review_counts['num_reviews'] > 1]\n",
+    "print(users_with_more_than_1_review[['user_id', 'date', 'num_reviews']])\n",
+    "filtered_rows = df.loc[(df['user_id'].isin(users_with_more_than_1_review['user_id'])) & (df['time_diff'] < pd.Timedelta('60 seconds'))]\n",
+    "print(filtered_rows[['user_id', 'date', 'time_diff']])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e2c5d1f",
+   "metadata": {},
+   "source": [
+    "Less than 5 seconds time differnce reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "ebb0e103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      user_id       date  num_reviews\n",
+      "36     -0vutwuE36iYMqM2wHaStQ 2009-03-12            2\n",
+      "41     -13RX4Gy_F-zoLIenWAo-w 2007-04-20            2\n",
+      "45     -2TJaAdxSGnTyy9qGr1z1Q 2011-04-08            2\n",
+      "49     -2Vg22LqKpg0zjf5A-SWLA 2015-01-23            2\n",
+      "62     -2nNiAnDaSbQayynsqgL6Q 2011-09-20            2\n",
+      "...                       ...        ...          ...\n",
+      "95614  zwPKdviIT_C4CD2ZL_nJyQ 2012-06-19            2\n",
+      "95621  zx4c7K-1eBSvEmUg7zqiZQ 2011-03-09            2\n",
+      "95631  zxeXnjqmlrAspfk17LSZCg 2011-03-20            3\n",
+      "95639  zxuxd6Hz2tKcpgZ71dYEcw 2014-04-03            2\n",
+      "95654  zyNrXvJyYdC34tS6BcCykA 2009-11-17            3\n",
+      "\n",
+      "[6503 rows x 3 columns]\n",
+      "                      user_id       date       time_diff\n",
+      "80156  FjOKTsuKtdoLhz3CWsuEPQ 2012-02-01 0 days 00:00:00\n",
+      "80859  O8v43MR97f2vz_v2br8mNg 2011-01-30 0 days 00:00:01\n",
+      "85684  WJpWp-3zZ3iuwEYCGGf0yA 2012-03-15 0 days 00:00:00\n",
+      "56117  YEiJOtOBBRKEpRuvZNA9Cg 2011-07-11 0 days 00:00:01\n",
+      "77914  cKRiEclULFf4TczO1-tf3A 2012-06-18 0 days 00:00:01\n",
+      "79976  d8FwfuFM9SJA3kU_cIQ3aw 2015-05-17 0 days 00:00:04\n",
+      "27330  esMNMMH7BKkiJd91fvO-FA 2011-08-16 0 days 00:00:03\n",
+      "65556  u8tyDjEaANLSOZ4MTKfhhg 2012-07-06 0 days 00:00:01\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df['time'] = pd.to_datetime(df['time'])\n",
+    "df.sort_values(by=['user_id', 'date', 'time'], inplace=True)\n",
+    "df['time_diff'] = df.groupby(['user_id', 'date'])['time'].diff()\n",
+    "user_date_review_counts = df.groupby(['user_id', 'date'])['review_id'].count().reset_index()\n",
+    "user_date_review_counts.columns = ['user_id', 'date', 'num_reviews']\n",
+    "users_with_more_than_1_review = user_date_review_counts[user_date_review_counts['num_reviews'] > 1]\n",
+    "print(users_with_more_than_1_review[['user_id', 'date', 'num_reviews']])\n",
+    "filtered_rows = df.loc[(df['user_id'].isin(users_with_more_than_1_review['user_id'])) & (df['time_diff'] < pd.Timedelta('5 seconds'))]\n",
+    "print(filtered_rows[['user_id', 'date', 'time_diff']])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d06e80af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['_id', 'user_id', 'name', 'review_count', 'useful', 'review_id',\n",
+      "       'stars', 'useful_review', 'text', 'date', 'time'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "attributes = df.columns\n",
+    "print(attributes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b35c339",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
