--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -277,9 +277,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45b58287",
+   "metadata": {},
+   "source": [
+    "Star Rating Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "0b35c339",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['review_length'] = df['text'].apply(len)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b35c339",
+   "id": "808610f5",
    "metadata": {},
    "outputs": [],
    "source": []
