--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -297,6 +297,56 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "bd662779",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      user_id  average_stars  num_reviews\n",
+      "5      --U6F4iI3ABK6IVCCgYc-g       2.500000            2\n",
+      "8      --bcBB892GN4ycJbGli0MQ       2.000000            1\n",
+      "9      --ccVMj2PN6Z9qtdOdlung       2.000000            2\n",
+      "19     -0aZWYi2YicFaLxTru96nA       2.000000            1\n",
+      "34     -2ccuXJJIQmaXKQ9krmRfw       2.000000            2\n",
+      "...                       ...            ...          ...\n",
+      "38239  zwIhFlA84tTLvSSjHc6IgA       2.714286           14\n",
+      "38248  zxdgI8d0g6cX4mAl5_ALFA       1.666667            3\n",
+      "38259  zywyfATfP8SPY8JaYBraIg       1.666667            3\n",
+      "38261  zz0xCxZhHIceqSIlKIcj9A       2.000000            1\n",
+      "38266  zzT0pSbiaNAPL171kwnvjA       1.000000            1\n",
+      "\n",
+      "[4945 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the CSV file into a DataFrame\n",
+    "df = pd.read_csv('btp.csv')\n",
+    "# Calculate average star rating for each user\n",
+    "user_avg_rating = df.groupby('user_id')['stars'].mean().reset_index()\n",
+    "user_avg_rating.columns = ['user_id', 'average_stars']  # Rename the column for clarity\n",
+    "\n",
+    "# Count number of reviews made by each user\n",
+    "user_review_count = df['user_id'].value_counts().reset_index()\n",
+    "user_review_count.columns = ['user_id', 'num_reviews']\n",
+    "\n",
+    "# Merge average rating and review count DataFrames\n",
+    "user_stats = pd.merge(user_avg_rating, user_review_count, on='user_id')\n",
+    "\n",
+    "# Filter users with average rating less than 3 and at least one review\n",
+    "users_with_low_rating = user_stats[(user_stats['average_stars'] < 3) & (user_stats['num_reviews'] > 0)]\n",
+    "\n",
+    "# Display the result\n",
+    "print(users_with_low_rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "808610f5",
    "metadata": {},
    "outputs": [
