--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -688,6 +688,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01822427",
+   "metadata": {},
+   "source": [
+    "Star Rating Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f33920e9",
