--- a/test.ipynb
+++ b/test.ipynb
@@ -289,10 +289,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['_id', 'user_id', 'name', 'review_count', 'useful', 'review_id',\n",
+       "       'stars', 'useful_review', 'text', 'date', 'time'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('btp.csv')\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Text Length: 718.2507084481841\n",
+      "Threshold Value: 718.2507084481841\n",
+      "Number of User IDs with Text Length Above Threshold: 38211\n",
+      "Number of User IDs with Text Length Below or Equal to Threshold: 65184\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the CSV file\n",
+    "data = pd.read_csv('btp.csv')\n",
+    "\n",
+    "# Calculate the length of the text for each user ID\n",
+    "data['text_length'] = data['text'].apply(len)\n",
+    "\n",
+    "average_text_length = data['text_length'].mean()\n",
+    "\n",
+    "threshold = average_text_length\n",
+    "\n",
+    "above_threshold_count = (data['text_length'] > threshold).sum()\n",
+    "\n",
+    "below_threshold_count = (data['text_length'] <= threshold).sum()\n",
+    "\n",
+    "print(\"Average Text Length:\", average_text_length)\n",
+    "print(\"Threshold Value:\", threshold)\n",
+    "print(\"Number of User IDs with Text Length Above Threshold:\", above_threshold_count)\n",
+    "print(\"Number of User IDs with Text Length Below or Equal to Threshold:\", below_threshold_count)\n"
+   ]
   }
  ],
  "metadata": {
