--- a/features.ipynb
+++ b/features.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average Length"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,10 +26,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the CSV file\n",
     "data = pd.read_csv('btp.csv')\n",
     "\n",
-    "# Calculate the length of the text for each user ID\n",
     "data['text_length'] = data['text'].apply(len)\n",
     "\n",
     "average_text_length = data['text_length'].mean()\n",
@@ -44,9 +49,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Sentiment Score"
-   ]
+   "source": []
   }
  ],
  "metadata": {
