--- a/1.ipynb
+++ b/1.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,9 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Classified Reviews: 26\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
@@ -242,37 +250,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting textblob\n",
+      "Collecting textblobNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.2 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "  Downloading textblob-0.18.0.post0-py3-none-any.whl.metadata (4.5 kB)\n",
-      "Requirement already satisfied: nltk>=3.8 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from textblob) (3.8.1)\n",
-      "Requirement already satisfied: click in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (8.1.7)\n",
-      "Requirement already satisfied: joblib in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (1.3.2)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (2023.12.25)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (4.66.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\shiva\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from click->nltk>=3.8->textblob) (0.4.6)\n",
+      "Requirement already satisfied: nltk>=3.8 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from textblob) (3.8.1)\n",
+      "Requirement already satisfied: click in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (8.1.7)\n",
+      "Requirement already satisfied: joblib in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (1.3.2)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (2023.12.25)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from nltk>=3.8->textblob) (4.66.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\pc\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from click->nltk>=3.8->textblob) (0.4.6)\n",
       "Downloading textblob-0.18.0.post0-py3-none-any.whl (626 kB)\n",
       "   ---------------------------------------- 0.0/626.3 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 0.0/626.3 kB ? eta -:--:--\n",
-      "    --------------------------------------- 10.2/626.3 kB ? eta -:--:--\n",
-      "   -- ------------------------------------ 41.0/626.3 kB 393.8 kB/s eta 0:00:02\n",
-      "   ----- --------------------------------- 92.2/626.3 kB 655.4 kB/s eta 0:00:01\n",
-      "   -------- ----------------------------- 143.4/626.3 kB 853.3 kB/s eta 0:00:01\n",
-      "   --------------- ------------------------ 245.8/626.3 kB 1.1 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 286.7/626.3 kB 1.0 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 368.6/626.3 kB 1.1 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 471.0/626.3 kB 1.3 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 471.0/626.3 kB 1.3 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 501.8/626.3 kB 1.1 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 583.7/626.3 kB 1.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 626.3/626.3 kB 1.1 MB/s eta 0:00:00\n",
+      "   ----- ---------------------------------- 81.9/626.3 kB 2.3 MB/s eta 0:00:01\n",
+      "   -------------- ------------------------- 225.3/626.3 kB 2.3 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 358.4/626.3 kB 2.5 MB/s eta 0:00:01\n",
+      "   ---------------------- ----------------- 358.4/626.3 kB 2.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  624.6/626.3 kB 2.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 626.3/626.3 kB 2.5 MB/s eta 0:00:00\n",
       "Installing collected packages: textblob\n",
-      "Successfully installed textblob-0.18.0.post0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Successfully installed textblob-0.18.0.post0\n"
      ]
     }
    ],
    "source": [
     "pip install textblob\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sentiment score"
    ]
   },
   {
@@ -297,7 +320,10 @@
       "19177  Fast, friendly, delicious, and affordable! Bes...         0.643750\n",
       "19178  Suzie Hot Sauce is a great place -- if you lik...         0.084509\n",
       "\n",
-      "[19179 rows x 2 columns]\n"
+      "[19179 rows x 2 columns]\n",
+      "Average Sentiment Score: 0.22439122222461572\n",
+      "Number of reviews above threshold: 9377\n",
+      "Number of reviews below threshold: 9802\n"
      ]
     }
    ],
@@ -318,8 +344,72 @@
     "df['sentiment_score'] = df['text'].apply(calculate_sentiment)\n",
     "\n",
     "# Display the DataFrame with sentiment scores\n",
-    "print(df[['text', 'sentiment_score']])\n"
+    "print(df[['text', 'sentiment_score']])\n",
+    "# Calculate the average sentiment score\n",
+    "average_sentiment_score = df['sentiment_score'].mean()\n",
+    "\n",
+    "# Print the average sentiment score\n",
+    "print(\"Average Sentiment Score:\", average_sentiment_score)\n",
+    "# Calculate the number of reviews above and below the threshold\n",
+    "reviews_above_threshold = df[df['sentiment_score'] > average_sentiment_score].shape[0]\n",
+    "reviews_below_threshold = df[df['sentiment_score'] < average_sentiment_score].shape[0]\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Number of reviews above threshold:\", reviews_above_threshold)\n",
+    "print(\"Number of reviews below threshold:\", reviews_below_threshold)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Text Length: 718.2507084481841\n",
+      "Threshold Value: 718.2507084481841\n",
+      "Number of User IDs with Text Length Above Threshold: 38211\n",
+      "Number of User IDs with Text Length Below or Equal to Threshold: 65184\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('btp.csv')\n",
+    "\n",
+    "data['text_length'] = data['text'].apply(len)\n",
+    "\n",
+    "average_text_length = data['text_length'].mean()\n",
+    "\n",
+    "threshold = average_text_length\n",
+    "\n",
+    "above_threshold_count = (data['text_length'] > threshold).sum()\n",
+    "\n",
+    "below_threshold_count = (data['text_length'] <= threshold).sum()\n",
+    "\n",
+    "print(\"Average Text Length:\", average_text_length)\n",
+    "print(\"Threshold Value:\", threshold)\n",
+    "print(\"Number of User IDs with Text Length Above Threshold:\", above_threshold_count)\n",
+    "print(\"Number of User IDs with Text Length Below or Equal to Threshold:\", below_threshold_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
