--- a/1.ipynb
+++ b/1.ipynb
@@ -9,49 +9,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold Rating for Below: 1.5346785546691695\n",
-      "Threshold Rating for Above: 4.987705302674801\n",
-      "Number of Reviews in Combined File: 6875\n"
+      "Rating Threshold: 3.8366963866729233\n",
+      "Sentiment Score Threshold: 0.22439122222461572\n",
+      "Number of Filtered Reviews: 4422\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "from textblob import TextBlob\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "df = pd.read_csv('CleanedDataset.csv')\n",
     "\n",
-    "# Calculate the combined rating of all users based on 'stars' column\n",
+    "# Calculate the combined rating of all users\n",
     "combined_rating = df['stars'].mean()\n",
     "\n",
-    "# Determine the threshold rating for below threshold and above threshold\n",
-    "threshold_rating_below = 0.4 * combined_rating\n",
-    "threshold_rating_above = 1.3 * combined_rating\n",
+    "# Determine the threshold rating based on the combined rating\n",
+    "rating_threshold = combined_rating\n",
     "\n",
-    "# Filter reviews based on the condition: rating < threshold rating\n",
-    "reviews_below_threshold = df[df['stars'] < threshold_rating_below]\n",
+    "# Calculate the sentiment score for each review\n",
+    "df['sentiment_score'] = df['text'].apply(lambda x: TextBlob(x).sentiment.polarity)\n",
     "\n",
-    "# Filter reviews based on the condition: rating > threshold rating\n",
-    "reviews_above_threshold = df[df['stars'] > threshold_rating_above]\n",
+    "# Calculate the combined sentiment score of all reviews\n",
+    "combined_sentiment_score = df['sentiment_score'].mean()\n",
     "\n",
-    "# Concatenate both DataFrames\n",
-    "all_filtered_reviews = pd.concat([reviews_below_threshold, reviews_above_threshold])\n",
+    "# Determine the threshold sentiment score based on the combined sentiment score\n",
+    "sentiment_threshold =  combined_sentiment_score\n",
     "\n",
-    "# Store the filtered reviews in a single CSV file\n",
-    "all_filtered_reviews.to_csv('all_filtered_reviews.csv', index=False)\n",
+    "# Filter reviews based on both rating and sentiment score thresholds\n",
+    "filtered_reviews = df[(df['stars'] < rating_threshold) & (df['sentiment_score'] < sentiment_threshold)]\n",
     "\n",
-    "# Display the threshold rating and the number of reviews in the combined file\n",
-    "num_reviews_combined = len(all_filtered_reviews)\n",
-    "print(f\"Threshold Rating for Below: {threshold_rating_below}\")\n",
-    "print(f\"Threshold Rating for Above: {threshold_rating_above}\")\n",
-    "print(f\"Number of Reviews in Combined File: {num_reviews_combined}\")\n"
+    "# Store the filtered reviews in a new CSV file\n",
+    "filtered_reviews.to_csv('filtered_reviews_combined.csv', index=False)\n",
+    "\n",
+    "# Display the thresholds and the number of filtered reviews\n",
+    "num_filtered_reviews = len(filtered_reviews)\n",
+    "print(f\"Rating Threshold: {rating_threshold}\")\n",
+    "print(f\"Sentiment Score Threshold: {sentiment_threshold}\")\n",
+    "print(f\"Number of Filtered Reviews: {num_filtered_reviews}\")\n"
    ]
   },
   {
@@ -110,15 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Threshold Reviews within 00:00 to 6:00 Time Frame: 450.2482226060666\n",
-      "Number of Classified Reviews: 0\n"
+      "Reviews per Day Threshold: 1.0935059011346142\n",
+      "Rating Threshold: 3.8366963866729233\n",
+      "Number of Filtered Reviews: 3148\n"
      ]
     }
    ],
@@ -128,49 +132,48 @@
     "# Read the CSV file into a DataFrame\n",
     "df = pd.read_csv('CleanedDataset.csv')\n",
     "\n",
-    "# Filter the reviews within the specified time frame (00:00 to 6:00)\n",
-    "reviews_within_timeframe = df[(df['time'] >= '00:00:00') & (df['time'] < '06:00:00')].copy()\n",
+    "# Convert the 'date' column to datetime format\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
     "\n",
-    "# Convert the 'time' column to datetime format\n",
-    "reviews_within_timeframe['time'] = pd.to_datetime(reviews_within_timeframe['time'], format='%H:%M:%S')\n",
-    " \n",
-    "#Group the reviews by 'user_id' and count the number of reviews for each user within the time frame\n",
+    "# Group the reviews by 'user_id' and 'date', and count the number of reviews for each user on each day\n",
     "\n",
-    "user_reviews_within_timeframe = reviews_within_timeframe.groupby('user_id').size()\n",
+    "user_reviews_per_day = df.groupby(['user_id', df['date'].dt.date]).size()\n",
     "\n",
-    "# Calculate the combined number of reviews within the time frame\n",
+    "# Calculate the combined average number of reviews per day\n",
+    "combined_avg_reviews_per_day = user_reviews_per_day.mean()\n",
     "\n",
-    "combined_reviews_within_timeframe = user_reviews_within_timeframe.mean()\n",
+    "# Determine the threshold based on the combined average number of reviews per day\n",
+    "threshold_reviews_per_day = combined_avg_reviews_per_day\n",
     "\n",
-    "# Calculate the average time difference between consecutive reviews for each user within the time frame\n",
-    "reviews_within_timeframe = reviews_within_timeframe.sort_values(by=['user_id', 'time'])\n",
-    "reviews_within_timeframe['time_diff'] = reviews_within_timeframe.groupby('user_id')['time'].diff().dt.total_seconds().fillna(0)\n",
-    "user_avg_time_diff = reviews_within_timeframe.groupby('user_id')['time_diff'].mean()\n",
-    "combined_avg_time_diff = user_avg_time_diff.mean()\n",
+    "# Calculate the combined rating of all users\n",
     "\n",
-    "# Determine the threshold based on the combined average number of reviews and average time difference within the time frame\n",
+    "combined_rating = df['stars'].mean()\n",
     "\n",
-    "weight_reviews = 0.5\n",
+    "# Determine the rating threshold based on the combined rating\n",
     "\n",
-    "weight_time_diff = 0.5\n",
+    "threshold_rating =  combined_rating  # Adjust the threshold as needed\n",
     "\n",
-    "threshold_reviews_within_timeframe = (weight_reviews * combined_reviews_within_timeframe + weight_time_diff * combined_avg_time_diff)\n",
+    "# Filter the users based on whether the number of reviews on any single day exceeds the threshold\n",
+    "# and the rating is below the rating threshold\n",
     "\n",
-    "# Classify the reviews based on whether the user's number of reviews within the time frame exceeds the threshold\n",
+    "filtered_users = user_reviews_per_day[(user_reviews_per_day > threshold_reviews_per_day)].reset_index()\n",
     "\n",
-    "classified_reviews = df[df['user_id'].map(user_reviews_within_timeframe) > threshold_reviews_within_timeframe]\n",
+    "# Filter the original DataFrame based on the filtered users\n",
     "\n",
-    "# Store the classified reviews in a new CSV file\n",
+    "filtered_reviews = df[df['user_id'].isin(filtered_users['user_id'])]\n",
     "\n",
-    "classified_reviews.to_csv('classified_reviews.csv', index=False)\n",
+    "filtered_reviews = filtered_reviews[filtered_reviews['stars'] < threshold_rating]\n",
     "\n",
-    "# Display the threshold and the number of classified reviews\n",
+    "# Store the filtered reviews in a new CSV file\n",
     "\n",
-    "num_classified_reviews = len(classified_reviews)\n",
+    "filtered_reviews.to_csv('filtered_reviews_threshold.csv', index=False)\n",
     "\n",
-    "print(f\"Threshold Reviews within 00:00 to 6:00 Time Frame: {threshold_reviews_within_timeframe}\")\n",
+    "# Display the threshold and the number of filtered reviews\n",
     "\n",
-    "print(f\"Number of Classified Reviews: {num_classified_reviews}\")\n"
+    "num_filtered_reviews = len(filtered_reviews)\n",
+    "print(f\"Reviews per Day Threshold: {threshold_reviews_per_day}\")\n",
+    "print(f\"Rating Threshold: {threshold_rating}\")\n",
+    "print(f\"Number of Filtered Reviews: {num_filtered_reviews}\")\n"
    ]
   },
   {
