--- a/1.ipynb
+++ b/1.ipynb
@@ -192,14 +192,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Classified Reviews: 26\n"
+      "Number of Similar Reviews: 52\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import pandas as pd\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
     "df = pd.read_csv('CleanedDataset.csv')\n",
@@ -216,32 +216,18 @@
     "# Define the threshold similarity value\n",
     "threshold_similarity = 0.7  # You can adjust this value based on your requirements\n",
     "\n",
-    "# Function to classify reviews based on similarity\n",
-    "def classify_reviews(similarity_matrix, threshold):\n",
-    "    classified_reviews = []\n",
-    "    num_reviews = len(similarity_matrix)\n",
-    "    for i in range(num_reviews):\n",
-    "        for j in range(i+1, num_reviews):\n",
-    "            if similarity_matrix[i][j] >= threshold:\n",
-    "                classified_reviews.append((i, j))\n",
-    "    return classified_reviews\n",
+    "# Filter reviews based on similarity threshold\n",
+    "similar_reviews_indices = [(i, j) for i in range(len(cosine_sim)) for j in range(i+1, len(cosine_sim)) if cosine_sim[i][j] >= threshold_similarity]\n",
     "\n",
-    "# Get classified reviews based on similarity\n",
-    "classified_reviews_indices = classify_reviews(cosine_sim, threshold_similarity)\n",
+    "# Filtered DataFrame based on similarity threshold\n",
+    "similar_reviews_df = df.iloc[[index for pair in similar_reviews_indices for index in pair]]\n",
     "\n",
-    "# Convert classified reviews indices to DataFrame\n",
-    "classified_reviews_df = pd.DataFrame(classified_reviews_indices, columns=['review_index_1', 'review_index_2'])\n",
+    "# Save the similar reviews to a new CSV file\n",
+    "similar_reviews_df.to_csv('similar_reviews.csv', index=False)\n",
     "\n",
-    "# Merge with original DataFrame to get review details\n",
-    "classified_reviews_details = pd.merge(classified_reviews_df, df, left_on='review_index_1', right_index=True)\n",
-    "classified_reviews_details = pd.merge(classified_reviews_details, df, left_on='review_index_2', right_index=True, suffixes=('_1', '_2'))\n",
-    "\n",
-    "# Save the classified reviews to a new CSV file\n",
-    "classified_reviews_details.to_csv('classified_review.csv', index=False)\n",
-    "\n",
-    "# Display the number of classified reviews\n",
-    "num_classified_reviews = len(classified_reviews_details)\n",
-    "print(f\"Number of Classified Reviews: {num_classified_reviews}\")\n"
+    "# Display the number of similar reviews\n",
+    "num_similar_reviews = len(similar_reviews_df)\n",
+    "print(f\"Number of Similar Reviews: {num_similar_reviews}\")\n"
    ]
   },
   {
