--- a/features.ipynb
+++ b/features.ipynb
@@ -82,34 +82,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average useful counts of all reviews: 1134.9725808791527\n",
-      "Number of reviews above threshold: 17758\n",
-      "Number of reviews below threshold: 85637\n"
+      "Average useful counts of all reviews: 1110.7745721672754\n",
+      "Number of reviews above threshold: 4477\n",
+      "Number of reviews below threshold: 19890\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the CSV file\n",
-    "df = pd.read_csv('btp.csv')\n",
+    "# Read the existing threshold_values.csv\n",
+    "threshold_df = pd.read_csv('threshold_values.csv')\n",
     "\n",
     "# Calculate the average of the 'useful' column\n",
-    "average_useful = df['useful'].mean()\n",
+    "average_useful = threshold_df['useful'].mean()\n",
     "\n",
     "# Define the threshold\n",
     "threshold = average_useful\n",
     "\n",
+    "# Label the reviews based on the threshold\n",
+    "threshold_df['rule5_threshold'] = threshold_df['useful'].apply(lambda x: 1 if x > threshold else 0)\n",
+    "\n",
+    "# Save the modified DataFrame back to threshold_values.csv\n",
+    "threshold_df.to_csv('threshold_values.csv', index=False)\n",
+    "\n",
     "# Count reviews above and below threshold\n",
-    "above_threshold_count = df[df['useful'] > threshold].shape[0]\n",
-    "below_threshold_count = df[df['useful'] <= threshold].shape[0]\n",
+    "above_threshold_count = threshold_df[threshold_df['useful'] > threshold].shape[0]\n",
+    "below_threshold_count = threshold_df[threshold_df['useful'] <= threshold].shape[0]\n",
     "\n",
     "# Print the results\n",
     "print(f'Average useful counts of all reviews: {average_useful}')\n",
