--- a/features.ipynb
+++ b/features.ipynb
@@ -82,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average useful counts of all reviews: 1110.7745721672754\n",
-      "Number of reviews above threshold: 4477\n",
-      "Number of reviews below threshold: 19890\n"
+      "Average useful counts of all reviews: 2.1193417326712356\n",
+      "Number of reviews above threshold: 6656\n",
+      "Number of reviews below threshold: 17711\n"
      ]
     }
    ],
@@ -102,20 +102,20 @@
     "threshold_df = pd.read_csv('threshold_values.csv')\n",
     "\n",
     "# Calculate the average of the 'useful' column\n",
-    "average_useful = threshold_df['useful'].mean()\n",
+    "average_useful = threshold_df['useful_review'].mean()\n",
     "\n",
     "# Define the threshold\n",
     "threshold = average_useful\n",
     "\n",
     "# Label the reviews based on the threshold\n",
-    "threshold_df['rule5_threshold'] = threshold_df['useful'].apply(lambda x: 1 if x > threshold else 0)\n",
+    "threshold_df['rule5_threshold'] = threshold_df['useful_review'].apply(lambda x: 1 if x > threshold else 0)\n",
     "\n",
     "# Save the modified DataFrame back to threshold_values.csv\n",
     "threshold_df.to_csv('threshold_values.csv', index=False)\n",
     "\n",
     "# Count reviews above and below threshold\n",
-    "above_threshold_count = threshold_df[threshold_df['useful'] > threshold].shape[0]\n",
-    "below_threshold_count = threshold_df[threshold_df['useful'] <= threshold].shape[0]\n",
+    "above_threshold_count = threshold_df[threshold_df['useful_review'] > threshold].shape[0]\n",
+    "below_threshold_count = threshold_df[threshold_df['useful_review'] <= threshold].shape[0]\n",
     "\n",
     "# Print the results\n",
     "print(f'Average useful counts of all reviews: {average_useful}')\n",
